Fixed assistant z-index and added white bg

--- a/styles/Assistant.module.scss
+++ b/styles/Assistant.module.scss
@@ -8,7 +8,7 @@ $text-box-news: rgb(134, 142, 255);
   right: 25px;
   align-items: center;
   gap: 25px;
-  z-index: 10;
+  z-index: 100;
   font-size: 1.25rem;
 }
 .wrapper.hide {
@@ -25,6 +25,7 @@ $text-box-news: rgb(134, 142, 255);
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 5px 10px var(--backdrop);
+  background-color: var(--white);
 }
 
 .assistantTextBox {
